--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -103,6 +103,10 @@ small {
 }
 
 @media (max-width: 800px) {
+  .navbar {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
   .nav-option {
     font-size: 1.5em;
   }
